--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -64,6 +64,8 @@
 .proj-imgbx img {
   cursor: pointer;
   width: 100%;
+  height: 200px;
+  object-fit: cover;
   transition: transform 0.3s ease-in-out;
 }
 
