--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -41,6 +41,7 @@
 @media (min-width: 768px) {
   .banner h1 {
     font-size: 50px;
+    margin-bottom: 30px;
   }
   .banner p {
     font-size: 20px;
@@ -68,7 +69,7 @@
   margin-left: 25px;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .banner img {
     margin-top: -20px;
     margin-left: 50px;
@@ -85,6 +86,7 @@
   .banner button svg {
     font-size: 30px;
   }
+
 }
 
 /* ipad view */
@@ -97,10 +99,7 @@
     width: 300px;
   }
 
-  .banner h1 {
-    font-size: 40px;
-    margin-bottom: 20px;
-  }
+
 
   .txt-rotate > .wrap {
     border-right: 0.08em solid #666;
