--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -107,6 +107,7 @@
 .proj-txtx span {
   font-size: 16px;
   color: #B8B8B8;
+  display: block;
 }
 
 /* Media queries for responsive text sizing */
